[workspace]
resolver = "2"

[package]
description = "Hyaena Technologies Web Service"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**/*"
]
name = "hyaena_technologies_web"
publish = false
rust-version = "1.87.0"
version = "0.2.0"

[[bin]]
name = "htnet"
path = "src/main.rs"

[dependencies]
config = "0.15.11"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
log = { version = "0.4.27", features = ["kv"] }
minio = "0.2.0"
opentelemetry = "0.30.0"
opentelemetry-http = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
serde_json = "1.0.140"
surrealdb = "2.3.3"
